# noviq

./: .gitignore  README.md  pyproject.toml  run_noviq.py  setup.py
noviq/: main.py  signatures.py
noviq/backend/: __init__.py  api.py  research.py  server.py
noviq/models/: model_selector.py
noviq/research/: research_manager.py
noviq/scrape/: scrape.py
noviq/signatures/: signatures.py
noviq/tools/: tools.py
noviq/ui/: __init__.py  interface.py  terminal_ui.py
ui/: package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.js  index.css
ui/src/components/: Header.js  ModelSelector.js  ResearchInterface.js  ResearchProgress.js
