[project]
name = "noviq"
version = "0.0.1"
description = ""
authors = [
    { name = "Sukeesh", email = "vsukeeshbabu@gmail.com" }
]
requires-python = ">=3.11.9"
dependencies = [
    "dspy>=2.6.14",
    "ollama>=0.4.7",
    "selenium>=4.30.0",
]

[tool.poetry]
name = "noviq"
version = "0.0.1"
description = ""
authors = ["Sukeesh <vsukeeshbabu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
